    on /dev with udev #69091.

    Add issue.devfix which would be auto copied to /etc/issue if 
    /sbin/rc detects the user is missing /dev/null or /dev/console.  
    Includes a simple explanation/fix for what's wrong.

    Make sure the clock init script runs right after checkroot so 
    that timestamps are synchronized asap #68133.

  26 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Don't use -A with fsck to respect the fs_passno since it'll try 
    to fsck all filesystems, not just the ones specified.  Instead, 
    awk /etc/fstab to review the passno field in checkroot #68822.

    Add support for 'gentoo=forcefsck' boot option in checkroot.

    Make sure we run devfsd in /sbin/rc even when /dev has been 
    automounted by the kernel #68795.

    Don't generate the device tarball in halt.sh with livecds #68469.

  25 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    net-scripts/net.modules.d/ifconfig:
    - Simplify ifconfig_is_up() 
    - Fix ifconfig_get_aliases_rev() to actually work... you can't
      specify an interface name to ifconfig if you want to see the
      aliases.
    - Workaround a couple ifconfig bugs dealing with aliases
    - Correct a return status in ifconfig_interface_del_addresses()
    - ifconfig_iface_stop() is bool, not void; fix the comments

    net-scripts/net.modules.d/iproute2:
    - iproute2_iface_stop() is bool, not void.  Fix the code so it
      returns meaningful values

    net-scripts/init.d/net.lo:
    - Fix preferred (ifconfig/dhcpcd) module loading so it doesn't
      barf when a preferred module is either (1) missing from
      net.modules.d or (2) not available due to missing dependencies
    - When loading all modules in order to stop an interface, only use
      the first available to satisfy each class wrapper

  24 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    Include livecd patch that was applied to baselayout-1.9.4-r6
    to use agetty instead of mingetty
